# FretBored

./: CMakeLists.txt
data/instruments/: bass.json  guitar.json
data/scales/: major.json  minor.json
includes/FretBoredApp/: Chromatic.h  Enharmonic.h  Fret.h  Instrument.h  Scale.h
includes/atypes/: IFret.h  IInstrument.h  IScale.h
src/: Fret.cpp  Instrument.cpp  Scale.cpp  main.cpp
tests/: CMakeLists.txt  Scale_test.cpp
